04-AGIC-Ingress-URL-Routing/02-kube-manifests-root-httppath/04-IngressService-Manifests/01-Ingress-URL-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-url-routing
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-nginx-clusterip-service
                port: 
                  number: 80
